JSmol resizeApplet; Short.valueOf
Former-commit-id: f4bf24aad241107b14f4e5ba55fae6bc75604a42